Fix link problems

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,5 +5,5 @@
 
 <p>本系统由东北大学软件学院主持开发, 主要用于各类管理人员测评等, 于2016年12月26日投入使用. </p>
 <p>故障提交和意见反馈：</p>
-<em>mma@obisoft.com.cn</em>
+<em>Anduin@aiursoft.com</em>
 <p>感谢使用本系统!</p>
