--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,6 +48,8 @@
         <h2>运行说明</h2>
         <p>
             项目由东北大学软件学院主持开发, 基于Dot Net Core技术。运营详情请参考<a href="https://docs.microsoft.com/en-us/dotnet/#pivot=docs&panel=getstarted">官方文档</a>。
+
         </p>
+        <p>本系统在Github上<a href="https://github.com/Anduin2017/SCE">开源</a>。修改本系统或由源代码编译本系统请访问GitHub。</p>
     </div>
 </div>
