--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,10 +52,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/lib/datatables/media/js/jquery.dataTables.min.js"></script>
-    <script src='~/lib/angular/angular.min.js'></script>
-    <script src='~/lib/textAngular/dist/textAngular-rangy.min.js'></script>
-    <script src='~/lib/textAngular/dist/textAngular-sanitize.min.js'></script>
-    <script src='~/lib/textAngular/dist/textAngular.min.js'></script>
+    <script src="~/angular.min.js"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular-rangy.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular-sanitize.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js'></script>
     <script src="~/js/site.js"></script>
     @RenderSection("scripts", required: false)
 </body>
