Use aiursoft brand.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">&copy; @DateTime.Now.Year - <a href="https://www.obisoft.com.cn">Obisoft Corporation</a> | 东北大学软件学院&nbsp;&nbsp;辽ICP备15014187号</p>
+            <p class="text-muted">&copy; @DateTime.Now.Year - <a href="https://www.aiursoft.com">Aiursoft Corporation</a> | 东北大学软件学院&nbsp;&nbsp;辽ICP备15014187号</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
