--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,9 +47,8 @@
     <div class="col-md-4">
         <h2>运行说明</h2>
         <p>
-            项目由东北大学软件学院主持开发, 基于Dot Net Core技术。运营详情请参考<a href="https://docs.microsoft.com/en-us/dotnet/#pivot=docs&panel=getstarted">官方文档</a>。
-
+            项目由东北大学软件学院开发，由Aiursoft运营，基于.NET Core技术构建。
         </p>
-        <p>本系统在Github上<a href="https://github.com/Anduin2017/SCE">开源</a>。修改本系统或由源代码编译本系统请访问GitHub。</p>
+        <p>本项目在Github上<a href="https://github.com/Anduin2017/SCE">开源</a>。所有代码修改都将直接触发部署到生产环境b。</p>
     </div>
 </div>
